--- a/Experiment-3/style.css
+++ b/Experiment-3/style.css
@@ -1,20 +1,20 @@
-:root{
+:root {
     --header-bg-color: rgb(26, 167, 26);
     --nav-bg-color: rgb(207, 223, 207);
     --main-bg-color: white;
     --footer-bg-color: rgb(25, 148, 25);
     --main-color: black;
 }
-input:checked ~ .container{
+
+#theme:checked ~ .container {
     --header-bg-color: rgb(0, 0, 0);
     --nav-bg-color: rgb(32, 34, 32);
     --main-bg-color: rgb(17, 14, 14);
     --footer-bg-color: rgb(0, 0, 0);
     --main-color: rgb(255, 255, 255);
-    
 }
 
-header{
+header {
     border: 2px solid black;
     background-color: var(--header-bg-color);
     color: white;
@@ -25,22 +25,24 @@ header{
     padding-left: 12px;
     padding-right: 12px;
 }
-nav{
+
+nav {
     border: 2px solid black;
     background-color: var(--nav-bg-color);
     display: flex;
     flex-direction: column;
     font-size: 20px;
 }
-main{
+
+main {
     border: 2px solid black;
     background-color: var(--main-bg-color);
     color: var(--main-color);
     font-size: 20px;
     padding-left: 12px;
-    background-color: var(--main-bg-color);
 }
-footer{
+
+footer {
     border: 2px solid black;
     background-color: var(--footer-bg-color);
     color: white;
@@ -49,14 +51,30 @@ footer{
     align-items: center;
     justify-content: center;
     font-size: 16px;
-
 }
-.container{
+
+.container {
     height: 100vh;
     display: grid;
     grid-template-columns: 150px auto;
     grid-template-rows: 70px auto 60px;
 }
-#theme{
+
+#theme {
     display: none;
+}
+
+.theme-toggle {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    font-size: 14px;
+}
+
+.theme-toggle label {
+    cursor: pointer;
+    background: #ccc;
+    padding: 4px 8px;
+    border-radius: 5px;
+    font-weight: bold;
 }
